package org.pentaho.di.engine.api;

public interface ITuple {
  Object[] getValues();
}
